docs/v3.8.0/_sources/gallery/experiment/sphere/sphere_coupling_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_coupling_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_coupling_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_coupling_vs_diameter.py:


Sphere: Coupling vs diameter
============================

.. GENERATED FROM PYTHON SOURCE LINES 8-9

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 9-18

.. code-block:: Python

    import numpy
    from TypedUnit import ureg

    from PyMieSim.experiment.detector import CoherentMode
    from PyMieSim.experiment.scatterer import Sphere
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment import Setup
    from PyOptik import Material








.. GENERATED FROM PYTHON SOURCE LINES 19-20

Defining the source to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 20-26

.. code-block:: Python

    source = Gaussian(
        wavelength=1200 * ureg.nanometer,
        polarization=0 * ureg.degree,
        optical_power=1e-3 * ureg.watt,
        NA=[0.1] * ureg.AU
    )







.. GENERATED FROM PYTHON SOURCE LINES 27-28

Defining the ranging parameters for the scatterer distribution

.. GENERATED FROM PYTHON SOURCE LINES 28-35

.. code-block:: Python

    scatterer = Sphere(
        diameter=numpy.linspace(100, 10000, 600) * ureg.nanometer,
        property=Material.BK7,
        medium_property=1.0 * ureg.RIU,
        source=source
    )








.. GENERATED FROM PYTHON SOURCE LINES 36-37

Defining the detector to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 37-48

.. code-block:: Python

    detector = CoherentMode(
        mode_number=['LP01', 'LP11', 'LP02'],
        NA=0.2 * ureg.AU,
        rotation=0 * ureg.degree,
        phi_offset=0.0 * ureg.degree,
        gamma_offset=0.0 * ureg.degree,
        sampling=600 * ureg.AU,
        mean_coupling=True,
        polarization_filter=None
    )








.. GENERATED FROM PYTHON SOURCE LINES 49-50

Defining the experiment setup

.. GENERATED FROM PYTHON SOURCE LINES 50-52

.. code-block:: Python

    experiment = Setup(scatterer=scatterer, source=source, detector=detector)








.. GENERATED FROM PYTHON SOURCE LINES 53-54

Measuring the properties

.. GENERATED FROM PYTHON SOURCE LINES 54-56

.. code-block:: Python

    dataframe = experiment.get('a1', drop_unique_level=True, scale_unit=True)








.. GENERATED FROM PYTHON SOURCE LINES 57-58

Plotting the results

.. GENERATED FROM PYTHON SOURCE LINES 58-59

.. code-block:: Python

    dataframe.plot(x='scatterer:diameter')



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_coupling_vs_diameter_001.png
   :alt: sphere coupling vs diameter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_coupling_vs_diameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='scatterer:diameter', ylabel='dimensionless'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.626 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_coupling_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_coupling_vs_diameter.ipynb <sphere_coupling_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_coupling_vs_diameter.py <sphere_coupling_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_coupling_vs_diameter.zip <sphere_coupling_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
